--- a/package.json
+++ b/package.json
@@ -5,19 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.16.1",
-    "express": "^4.14.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "express": "^4.14.1"
   },
-  "devDependencies": {
-    "react-scripts": "0.9.0"
-  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC"
