--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "express": "*",
-    "mongoose": "*" ,
-    "mongodb": "*" ,
+    "babel": "^5.8.23",
+    "body-parser": "^1.15.2",
+    "connect-mongo": "^1.3.2",
+    "express": "^4.14.0",
     "express-handlebars": "*",
-    "body-parser": "^1.16.1",
-    "express": "^4.14.1",
-    "body-parser": "^1.16.1",
-    "express": "^4.14.1"
+    "express-react-views": "^0.9.0",
+    "express-session": "^1.14.0",
+    "mongodb": "*",
+    "mongoose": "*",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "swipejs": "^2.2.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
